--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "My own template for lazy man!",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --ignore public/ --exec babel-node ./bin/www",
-    "start2": "webpack-dev-server --content-base=./public/dest --inline --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --ignore public/ --exec babel-node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -48,8 +46,6 @@
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.12.14",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "webpack": "1.12.14"
   }
 }
