--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "faker": "3.1.0",
     "koa": "2.0.0",
     "koa-bodyparser": "2.0.1",
+    "koa-connect-history-api-fallback": "0.3.0",
     "koa-convert": "1.2.0",
+    "koa-jwt": "1.1.2",
     "koa-logger": "2.0.0",
     "koa-router": "7.0.1",
     "koa-session": "3.3.1",
     "koa-static": "3.0.0",
     "react": "0.14.7",
-    "react-dom": "0.14.7"
+    "react-dom": "0.14.7",
+    "react-router": "2.0.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
+    "babel-cli": "6.6.5",
     "babel-core": "6.7.4",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
