--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.12.14"
+    "webpack": "1.12.14",
+    "webpack-hot-middleware": "2.10.0"
   }
 }
