--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My own template for lazy man!",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --ignore public/ --exec babel-node ./bin/www"
+    "start": "nodemon --ignore public/ --exec babel-node ./server/"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/joyfeel/webpack-hmr-koa2-boilerplate#readme",
   "dependencies": {
+    "babel-polyfill": "6.7.4",
     "faker": "3.1.0",
     "koa": "2.0.0",
     "koa-bodyparser": "2.0.1",
@@ -28,14 +29,19 @@
     "koa-router": "7.0.1",
     "koa-session": "3.3.1",
     "koa-static": "3.0.0",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-router": "2.0.1"
+    "mongoose": "4.4.14",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "react-redux": "4.4.4",
+    "react-router": "2.2.4",
+    "react-router-redux": "4.0.2",
+    "redux": "3.4.0",
+    "redux-saga": "0.9.5"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
     "babel-cli": "6.6.5",
-    "babel-core": "6.7.4",
+    "babel-core": "6.7.6",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
     "babel-preset-es2015": "6.6.0",
@@ -47,6 +53,11 @@
     "koa-webpack-hot-middleware": "1.0.3",
     "node-sass": "3.4.2",
     "react-transform-hmr": "1.0.4",
+    "redux-devtools": "3.2.0",
+    "redux-devtools-dock-monitor": "1.1.1",
+    "redux-devtools-log-monitor": "1.0.9",
+    "redux-logger": "2.6.1",
+    "redux-slider-monitor": "1.0.4",
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
